# icu

./: .gitignore  CMakeLists.txt  README.md  icudata.host.darwin-arm.mk  icudata.host.darwin-arm64.mk  icudata.host.darwin-mips.mk  icudata.host.darwin-mips64.mk  icudata.host.darwin-x86.mk  icudata.host.darwin-x86_64.mk  icudata.host.linux-arm.mk  icudata.host.linux-arm64.mk  icudata.host.linux-mips.mk  icudata.host.linux-mips64.mk  icudata.host.linux-x86.mk  icudata.host.linux-x86_64.mk  icudata.target.darwin-arm.mk  icudata.target.darwin-arm64.mk  icudata.target.darwin-mips.mk  icudata.target.darwin-x86.mk  icudata.target.darwin-x86_64.mk  icudata.target.linux-arm.mk  icudata.target.linux-arm64.mk  icudata.target.linux-mips.mk  icudata.target.linux-mips64.mk  icudata.target.linux-x86.mk  icudata.target.linux-x86_64.mk  icui18n.host.darwin-arm.mk  icui18n.host.darwin-arm64.mk  icui18n.host.darwin-mips.mk  icui18n.host.darwin-x86.mk  icui18n.host.darwin-x86_64.mk  icui18n.host.linux-arm.mk  icui18n.host.linux-arm64.mk  icui18n.host.linux-mips.mk  icui18n.host.linux-mips64.mk  icui18n.host.linux-x86.mk  icui18n.host.linux-x86_64.mk  icui18n.target.darwin-arm.mk  icui18n.target.darwin-arm64.mk  icui18n.target.darwin-mips.mk  (+30 more)
source/common/: sugar.cmake
source/common/unicode/: sugar.cmake
source/i18n/: sugar.cmake
source/i18n/unicode/: sugar.cmake
